styles/globals.scss
// --mainTextColor-light: #000;
// --mainLinkColor-light: #0da2b8;
// --mainBgColor-light: #f9fafb;
// --secondaryTextColor-light: #333333;
// --mainActiveColor-light: rgb(208, 0, 255);

// --mainTextColor-dark: #fff;
// --secondaryTextColor-dark: #adb0b1;
// --mainLinkColor-dark: #1ebed6;
// --mainBorderColor-dark: #2b3031;
// --mainBgColor-dark: #131415;
// --mainActiveColor-dark: rgb(208, 0, 255);

// --mainTextColor: var(--mainTextColor-dark);
// --secondaryTextColor: var(--secondaryTextColor-dark);
// --mainLinkColor: var(--mainLinkColor-dark);
// --mainBorderColor: var(--mainBorderColor-dark);
// --mainBgColor: var(--mainBgColor-dark);
// --mainActiveColor: var(--mainActiveColor-dark);

// --mainTextColor: var(--mainTextColor-light);
// --secondaryTextColor: var(--secondaryTextColor-light);
// --mainLinkColor: var(--mainLinkColor-light);
// --mainBorderColor: var(--mainBorderColor-light);
// --mainBgColor: var(--mainBgColor-light);



:root {
  --font-sans:
    "Ubuntu",
    "Raleway",
    "Nunito Sans",
    "Ubuntu Condensed",
    -apple-system,
    system-ui,
    sans-serif;
  --font-mono:
    "Ubuntu Mono",
    "JetBrains Mono",
    "Fira Mono",
    monospace;

  --mainLinkColor-light: #f09491;
  --mainBorderColor-light: #dadada;
  --mainActiveColor-light: rgb(208, 0, 255);

  --mainLinkColor: var(--mainLinkColor-light);
  --mainBorderColor: var(--mainBorderColor-light);
  --mainActiveColor: var(--mainActiveColor-light);


}

@import '../components/resume/index.scss';
@import './Calendar.css';
@import '../components/carousel/carousel.scss';


* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: var(--font-sans);
  font-size: small;
  text-decoration: none !important;
}


.line-v2 {
  position: relative;
  z-index: 999;

  &:hover {
    color: rgb(208, 0, 255) !important;
  }

  &:after {
    content: "";
    display: block;
    width: 1px;
    height: 5rem;
    margin: 0px auto;
    background-color: var(--mainLinkColor);
    opacity: 50%;
  }
}


body {

  .profile-view {
    &::before {
      content: 'Hello!';
      top: 0;
      right: -4rem;
      position: fixed;
      font-size: 10rem;
      z-index: -999;
      font-weight: bolder;
      opacity: 3%;
      writing-mode: vertical-rl;
      -webkit-writing-mode: vertical-rl;
      letter-spacing: 10px;
    }
  }

  .resume-view {
    &::before {
      content: 'Resume.';
      top: 0;
      right: -4rem;
      position: fixed;
      font-size: 10rem;
      font-weight: bolder;
      z-index: -999;
      opacity: 3%;
      writing-mode: vertical-rl;
      -webkit-writing-mode: vertical-rl;
      letter-spacing: 10px;
    }
  }

  .project-view {
    &::before {
      content: 'Accolades.';
      top: 0;
      left: -4rem;
      position: fixed;
      font-size: 10rem;
      font-weight: bolder;
      z-index: -999;
      opacity: 3%;
      writing-mode: vertical-rl;
      -webkit-writing-mode: vertical-rl;
      letter-spacing: 10px;
    }
  }

  .font-mono {
    font-family: var(--font-mono) !important;
  }

  .font-sans {
    font-family: var(--font-sans) !important;
  }

  .accent {
    cursor: pointer;
    color: var(--mainLinkColor) !important;
  }

  .heading {
    font-size: 18px;

  }

  .line {
    margin-right: 1rem;
    flex: 1;
    opacity: 10%;
  }

  .line-h {
    &:after {
      content: "";
      display: block;
      width: 1px;
      height: 12rem;
      margin: 0px auto;
      background-color: var(--mainLinkColor);
      opacity: 50%;

    }
  }



  .rotate-90 {
    writing-mode: vertical-rl;
    -webkit-writing-mode: vertical-rl;
  }

  .nav-btn {
    &:hover {
      background-color: transparent !important;
      color: var(--mainActiveColor) !important;
    }
  }

  .active {
    background-color: transparent !important;
    color: var(--mainActiveColor) !important;
  }

  .project_ {
    position: relative;

    &::before {
      content: "";
      position: absolute;
      top: 0px;
      right: 0px;
      bottom: 0px;
      left: 0px;
      transition: all .2s;
      background-color: rgba(0, 0, 0, 0.8);
      backdrop-filter: blur(10px) sepia(100%);
      -webkit-backdrop-filter: blur(5px) sepia(100%);
      border-bottom: 1px solid var(--mainLinkColor);
    }

    &:hover:before {
      backdrop-filter: blur(0) grayscale(0);
      -webkit-backdrop-filter: blur(0) sepia(0);
      border-bottom: 1px solid var(--mainActiveColor);
    }
  }

  .profile_layout {
    .profile-pic {
      position: relative;
      filter: grayscale(50%);

      &::before {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        border-right: 1px solid var(--mainLinkColor);
        border-bottom: 1px solid var(--mainLinkColor);
        transform: translate(10px, 10px);
        transition: all 0.2s;

      }

      &::after {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        border-top: 1px solid var(--mainLinkColor);
        border-left: 1px solid var(--mainLinkColor);
        transform: translate(-10px, -10px);
        background-color: var(--mainLinkColor);
        filter: opacity(50%);
        transition: all 0.2s;

      }

      &:hover {
        filter: grayscale(0);
      }

      &:hover:before {
        transform: translate(0px, 0px);
      }

      &:hover:after {
        filter: opacity(0) grayscale(0);
      }
    }
  }

  @-webkit-keyframes kenburns {
    0% {
      -webkit-transform-origin: bottom left;
      transform-origin: bottom left;
      transform: scale(1);
      -ms-transform: scale(1);
      /* IE 9 */
      -webkit-transform: scale(1);
      /* Safari and Chrome */
      -o-transform: scale(1);
      /* Opera */
      -moz-transform: scale(1);
      /* Firefox */
    }

    100% {
      transform: scale(1.2);
      -ms-transform: scale(1.2);
      /* IE 9 */
      -webkit-transform: scale(1.2);
      /* Safari and Chrome */
      -o-transform: scale(1.2);
      /* Opera */
      -moz-transform: scale(1.2);
      /* Firefox */
    }
  }

  @keyframes kenburns {
    0% {
      -webkit-transform-origin: bottom left;
      transform-origin: bottom left;
      transform: scale(1);
      -ms-transform: scale(1);
      /* IE 9 */
      -webkit-transform: scale(1);
      /* Safari and Chrome */
      -o-transform: scale(1);
      /* Opera */
      -moz-transform: scale(1);
      /* Firefox */
    }

    100% {
      transform: scale(1.2);
      -ms-transform: scale(1.2);
      /* IE 9 */
      -webkit-transform: scale(1.2);
      /* Safari and Chrome */
      -o-transform: scale(1.2);
      /* Opera */
      -moz-transform: scale(1.2);
      /* Firefox */
    }
  }

  a {
    text-decoration: none;
  }

  .blur {
    background: #00000090;
    backdrop-filter: blur(10px) saturate(180%) !important;
    -webkit-backdrop-filter: blur(16px) saturate(180%) !important;
    border: 1px solid rgba(255, 255, 255, 0.18);
  }


  .hide-scrollbar {
    &::-webkit-scrollbar {
      display: none !important;
    }

    -ms-overflow-style: none !important;
    scrollbar-width: none !important;
    overflow: -moz-scrollbars-none !important; //for older versions of firefox
  }

  .weatherApp {
    position: relative;
    background:
      url(https://res.cloudinary.com/kingsleysolomon/image/upload/v1660223626/portfolio/wolf-zimmermann-6sf5rf8QYFE-unsplash_l5c3aa.jpg) no-repeat center;
    background-size: cover;

    &::after {
      position: absolute;
      left: 0;
      top: 0;
      content: '';
      width: 100%;
      height: 100%;
      background-color: var(--mainBgColor);
      opacity: 70%;
      z-index: 1;
    }
  }

  #map {
    background-repeat: no-repeat;

    .ol-zoom {
      display: flex;
      flex-direction: column;
      gap: .2rem;
      width: fit-content;
      background-color: var(--mainTextColor);
      border-radius: 5px;
      padding: .1rem;

      .ol-zoom-in,
      .ol-zoom-out {
        background-color: var(--mainLinkColor);
        padding: .2rem;
        width: 2rem;
        height: 2.5rem;
      }

      .ol-zoom-in {
        border-radius: 5px 5px 0 0;
      }

      .ol-zoom-out {
        border-radius: 0 0 5px 5px;
      }
    }

    .ol-rotate {
      background-color: var(--mainLinkColor);
      border-radius: 5px;
      padding: .1rem;
      position: absolute;
      right: 0;
      bottom: 0;
      display: none;

      .ol-rotate-reset {
        background-color: var(--mainLinkColor);
        padding: .2rem;
        width: 2rem;
        height: 2.5rem;
        border-radius: 5px;
      }
    }

    .ol-attribution {

      position: absolute;
      left: 0;
      bottom: 0;
      display: none;

      button {
        background-color: var(--mainLinkColor);
        padding: .2rem;
        width: 2rem;
        height: 2.5rem;
        border-radius: 5px;
        margin-left: .2rem;
      }
    }
  }
}

@media screen and (min-width: 400px) {

  //sm
  .profile_layout {
    margin: 5rem 0 10rem !important;
  }

}

@media screen and (min-width: 480px) {
  //sm

}

@media screen and (min-width: 768px) {

  //md
  * {
    font-size: initial;
  }

  .heading {
    font-size: 24px;
  }
}

@media screen and (min-width: 992px) {

  .profile-view {
    &::before {
      display: none;
    }

    &::after {
      content: 'Hello!';
      position: fixed;
      bottom: -9rem;
      left: 0;
      font-size: 25rem;
      font-weight: bolder;
      z-index: -999;
      opacity: 3%;
      letter-spacing: 10px;
      // color: var(--mainLinkColor);
    }
  }

  .resume-view {
    &::before {
      display: none;
    }

    &::after {
      content: 'Resume.';
      position: fixed;
      bottom: -9rem;
      left: 0;
      font-size: 25rem;
      font-weight: bolder;
      z-index: -999;
      opacity: 3%;
      letter-spacing: 10px;
    }
  }

  .project-view {
    &::before {
      display: none;
    }

    &::after {
      content: 'Accolades.';
      position: fixed;
      top: -9rem;
      left: 0;
      font-size: 25rem;
      font-weight: bolder;
      z-index: -999;
      opacity: 3%;
      letter-spacing: 10px;
    }
  }

  //lg
  .project_ {

    &::before {
      content: "";
      position: static;
      background-color: transparent !important;
      backdrop-filter: blur(0) sepia(0) !important;
      -webkit-backdrop-filter: blur(0) sepia(0) !important;
      border: none !important;
    }

    .project_img {
      box-shadow: 0 10px 30px -10px #000000a0;
      filter: sepia(70%) brightness(30%) blur(3px);
      transition: all .3s;

      &:hover {
        filter: sepia(0) brightness(70%) blur(0);
      }
    }

    .project_box {
      box-shadow: 0 10px 30px -10px #000000a0;
      padding: 25px;
      border-radius: 5px;
      background-color: #1ebed630;
      backdrop-filter: blur(10px) saturate(180%) !important;
      -webkit-backdrop-filter: blur(16px) saturate(180%) !important;
    }
  }
}

@media screen and (min-width: 1280px) {}

@media screen and (min-width: 1536px) {
  //2xl
}

